Overflow @ Tablet View Fixed
Lower min-width of .skills-wrap to 500px less than the tablet view width.

--- a/Card-Templates -01- Portfolio Skills Layout/style.css
+++ b/Card-Templates -01- Portfolio Skills Layout/style.css
@@ -7,9 +7,8 @@
 
 body {
     height: 1000px;
-    min-width: 200px;
-    width: 100%;
-    border: 1px solid purple;
+
+    overflow: hidden;
 }
 
 .skills {
@@ -25,17 +24,21 @@ body {
     display: grid;
     gap:10px;
     grid-template-columns: repeat(2, 1fr);
-    border: 1px solid blue;
 }
 
 .skill-wrap {
-    background-color:darkgoldenrod;
+    background-color: #333;
     box-shadow: 1px 1px 3px 1px black;
     
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 10px;
     height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .skill-wrap img {
@@ -44,15 +47,18 @@ body {
 }
 
 .skill-wrap h4 {
-    text-align: center;
     height: 20%;
+    width: 80%;
+    margin-top:2px;
+    font-size: .8rem;
+    text-align: center;
+    color: #ccc;
 }
 
 @media(min-width: 768px) {
 
     .skills {
-        border: 1px solid green;
-        width: clamp(786px, 80%, 1000px);
+        width: clamp(500px, 80%, 1000px);
     }
 
     .skills-grid {
